--- a/Front_React_Example/react-express-mysql-practice/package.json
+++ b/Front_React_Example/react-express-mysql-practice/package.json
@@ -7,14 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "express": "^4.18.2",
+    "body-parser": "^1.20.1",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "http://localhost:3500",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
