--- a/Front_React_Example/react-router/package.json
+++ b/Front_React_Example/react-router/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "request": "^2.88.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:4200",
